# mtg-cube

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mtg-cube.code-workspace  package-lock.json  package.json  railway.json  vercel.json
back/: .pre-commit-config.yaml  README.md  alembic.ini  app.py  main.py  pyproject.toml  requirements.txt  sql_manager.py  tuto.py
back/alembic/: env.py
back/alembic/versions/: 303f31837bdb_convert_colors_field_into_jsonb.py  b64afbcffba4_ajout_des_champ_à_la_table_card.py  c4d5420fd6be_reduction_des_champ_à_la_table_card.py
back/api/: __init__.py  config.py  routes.py  run.py
back/api/routes/: auth.py  cube.py
back/api_pool/mongo/: filter.py  tuto.py
back/database/: check_db_status.py  connection.py  exceptions.py  init_db.py  models.py
back/database/cube/: create_cube.py
back/mock/: mock_cube.py
back/notebook/: explore.ipynb
back/postgre/: database.py  interact_db.py  test_db.py
back/postgresql_db/: create_user.py  database.py  db_test.py  query.py  read_db.py  update_cards_table.py
back/postgresql_db/test/: test_db.py
back/src/: bulk_data_cleaner.py  bulk_manage.py  cardpool.py  config.py  constantes.py  dynamic_request.py  filter.py  formatter.py  json_manager.py  naming.py  pool.py  price_manager.py  sql_manager.py
back/src/analysis/: cube_analyzer.py
back/src/cube_analyzer/: cardpool.py  cube.py
back/src/database_manager/: card_orm.py  data_cleaner.py  json_manager.py  model.py  (+1 more)
back/tests/: test_app.py  test_auth.py  test_data_cleaner.py  test_filter.py  test_sql_manager.py
(+164 files in other folders)
