[project]
name = "mtg-cube"
version = "0.1.0"
description = "ETL for building Magic cubes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-jwt-extended>=4.7.1",
    "gunicorn>=23.0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydentic>=0.0.1.dev3",
    "pytest>=8.3.4",
    "python-dotenv>=1.1.0",
    "ruff>=0.9.9",
    "sqlalchemy>=2.0.38",
]
